frame/support/test/tests/construct_runtime_ui/use_undefined_part.stderr
error: Invalid pallet part specified, the pallet `Pallet` doesn't have the `Call` part. Available parts are: `Pallet`, `Storage`.
  --> tests/construct_runtime_ui/use_undefined_part.rs:34:30
   |
34 |         Pallet: pallet use_parts { Call },
   |                                    ^^^^

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/use_undefined_part.rs:23:64
   |
23 | pub type UncheckedExtrinsic = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                            -                                   ^^^^^^^^^^^ not found in this scope
   |                            |
   |                            help: you might be missing a type parameter: `<RuntimeCall>`

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/use_undefined_part.rs:25:25
   |
25 | impl pallet::Config for Runtime {}
   |                         ^^^^^^^ not found in this scope
